# tower.core

./: .gitignore  README.md  git_commit_manifest.md  implementation_plan.md  pyproject.toml  task.md  walkthrough.md
apps/api/: main.py  pyproject.toml  settings.py
apps/api/modelling_stub_was_here/: filing.py
apps/api/routers/: audit.py  entities.py  filings.py  system.py  validation.py
apps/api/services/: telemetry.py
apps/api/tasks/: ingest.py
apps/backend/: pyproject.toml
apps/backend/routers/: entities.py  filings.py  system.py
apps/backend/tasks/: ingest.py
apps/data-engine/: main.py  pyproject.toml
apps/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: main.tsx
apps/frontend/src/stores/: aux.store.ts  filings.store.ts  (+5 more)
asdlc/architecture/: lsl_mpl_specification_000142.md  tower_system_architecture_000116.md
asdlc/business/: business_consultation_000113.md  comprehensive_business_plan_000114.md  data_privacy_security_brief_000120.md  ferc_confidentiality_protocol_000121.md  investor_pitch_deck_000116.md  product_price_sheet_000115.md
asdlc/marketing/: addressable_target_market_000111.md  international_market_brief_000112.md  task.md
asdlc/product/: autonomous_operations_concept_000130.md  compliance_workflow_recommendation_000128.md  expert_system_catalog_000118.md  market_brief_tribal_energy_000102.md  product_line_architecture_recommendation_000140.md  product_management_plan_000100.md  product_registry_000101.md  project_plan_gen1_000103.md  tower_core_functional_spec_000129.md  tower_sem_materiality_000150.md  universal_filing_ux_roadmap_000131.md
asdlc/product/forms/: eqr_solution_000110.md  form_1_solution_000105.md  form_2_solution_000106.md  form_60_solution_000108.md  form_6_solution_000107.md  form_714_solution_000109.md
audit_reports_baseline/0000320193-2024FY-10-K/: audit_FULL_CAL-LSE-XDT_MECH_202604101857.md
audit_reports_baseline/AAPL-2024FY-10-K/: audit_FULL_CAL-LSE-XDT_MECH_202604101901.md
audit_reports_baseline/ASML Holding NV-20XX-10-X/: audit_FULL_CAL-LSE-XDT_MECH_202604101857.md
audit_reports_baseline/ASML-20XX-10-X/: audit_FULL_CAL-LSE-XDT_MECH_202604101900.md  audit_FULL_CAL-LSE-XDT_MECH_202604101901.md
audit_reports_baseline/TRUE-2024FY-10-K/: audit_FULL_CAL-LSE-XDT_MECH_202604101900.md
docs/: tower_app_ui_definition.md
docs/tutorials/: python_library_development.md
results/: audit_report_apple_002.md  audit_report_apple_003.md  audit_report_apple_004.md  auto_recon_test_apple.md  dimensional_report.md  hierarchy_output.txt  report.txt  report_with_tree.txt  role_110000_tree.md  role_110000_tree_raw.txt  role_310000_calc_tree.md  role_310000_calc_tree_raw.txt  role_310000_comparison.md  role_310000_facts.md  role_310000_tree.md  role_310000_tree_raw.txt  role_balancesheet_calc_hierarchy.md  role_balancesheet_calc_validation.md  role_balancesheet_pres_hierarchy.md  role_cashflows_facts.md  test_dimensions_output.txt
scratch/: audit_9954516.py  audit_apple.py  audit_apple_reconciliation_zero_variance.py  audit_asml.py  debug_ai_analysis.py  diagnostic_audit.py  dimensional_report.py  extract_cashflows.py  process_apple.py  rebuild_registry.py  reproduce_reconciliation.py  reset_system.py  save_balancesheet.py  save_balancesheet_calc.py  save_balancesheet_calc_validation.py  test_asml_load.py  test_auto_reconciliation.py  test_dimensions.py  test_intuitive_reorg.py  test_ixbrl.py  test_model_selection.py  test_modeling_error.py  test_reorg_verification.py  validate_apple_calc.py  verify_apple_audit.py
scratch/mock_ixbrl/: main.xhtml  notes.xhtml
tower_core_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorials/: python_library_development.md
tutorials/ifrs_guidelines_parser.core/: proof_run_annotator.py  pyproject.toml
tutorials/ifrs_guidelines_parser.core/src/ifrs_guidelines_parser/core/: ocr_engine.py
(+38 files in other folders)
