[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tower-core-app"
version = "0.1.0"
description = "FERC Tower Core Application"
authors = [{ name = "Raynier" }]
requires-python = ">=3.9"
dependencies = [
    "lib-xbrl @ file:///home/raynier/Development/workspaces/fullstack/vibes/TOWER_WORKSPACE/xbrl.libs/lib_xbrl",
    "lib-xbrl-auditor @ file:///home/raynier/Development/workspaces/fullstack/vibes/TOWER_WORKSPACE/xbrl.libs/lib_xbrl_auditor",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
]

[tool.setuptools.package-dir]
"lib_xbrl" = "../xbrl.libs/lib_xbrl"
"lib_xbrl_auditor" = "../xbrl.libs/lib_xbrl_auditor"
