[project]
name = "tower-api"
version = "0.1.0"
description = "TOWER API Gateway"
authors = [{ name = "Raynier" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
