[project]
name = "tower-api"
version = "0.1.0"
description = "TOWER API Gateway"
authors = [{ name = "Raynier" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "psutil",
    "tower-kernel",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
