[project]
name = "tower-backend-legacy"
version = "0.1.0"
description = "TOWER Legacy/Extended API Endpoints"
authors = [{ name = "Raynier" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
